--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇫🇷 法国-2.41MB/s(Youtube:不良林), server: 195.154.200.150, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇦🇺 澳大利亚-446.2KB/s(Youtube:不良林), server: 185.167.116.250, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
-  - {name: 🇯🇵 日本-3.14MB/s(Youtube:不良林), server: 85.208.108.93, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
-  - {name: 🇨🇦 加拿大-600.9KB/s(Youtube:不良林), server: 134.195.198.95, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
-  - {name: 🇩🇪 德国-2.28MB/s(Youtube:不良林), server: 193.108.118.30, port: 9090, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇳 中国-1.03MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.14MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-1.01MB/s(Youtube:不良林), server: 78.129.253.9, port: 808, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇬🇧 英国-1.15MB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇬🇧 英国-5.45MB/s(Youtube:不良林), server: 144.24.88.101, port: 16833, type: vmess, uuid: f5425ccf-3946-4fb4-eb24-5393d78a392f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-713.0KB/s(Youtube:不良林), server: 111.45.29.75, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-790.9KB/s(Youtube:不良林), server: 196.247.59.154, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-600.9KB/s(Youtube:不良林), server: 134.195.198.95, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇺🇸 美国-1.69MB/s(Youtube:不良林), server: 38.143.66.20, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇩🇪 德国-2.96MB/s(Youtube:不良林), server: 49.12.203.80, port: 40960, type: ss, cipher: aes-256-gcm, password: 6kA7b3f9Aw2508erQ3W7D4}
+  - {name: 🇺🇸 美国-2.43MB/s(Youtube:不良林), server: v116.v2dns.bar, port: 80, type: vmess, uuid: c97cf46e-1554-36cb-8b36-c3556b883dc4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v116-DtoEwAEX, ws-headers: {Host: v116.v2dns.bar}}
+  - {name: 🇨🇦 加拿大-344.6KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇦🇺 澳大利亚-615.3KB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
+  - {name: 🇨🇳 中国-464.1KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65078, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-2.41MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-446.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.14MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-600.9KB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.14MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.01MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.15MB/s(Youtube:不良林)
       - 🇬🇧 英国-5.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-713.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-790.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-600.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.69MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.96MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.43MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-344.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-615.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-464.1KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇫🇷 法国-2.41MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-446.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.14MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-600.9KB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.14MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.01MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.15MB/s(Youtube:不良林)
       - 🇬🇧 英国-5.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-713.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-790.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-600.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.69MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.96MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.43MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-344.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-615.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-464.1KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-2.41MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-446.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.14MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-600.9KB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.14MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.01MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.15MB/s(Youtube:不良林)
       - 🇬🇧 英国-5.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-713.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-790.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-600.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.69MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.96MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.43MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-344.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-615.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-464.1KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇫🇷 法国-2.41MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-446.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.14MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-600.9KB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.14MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.01MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.15MB/s(Youtube:不良林)
       - 🇬🇧 英国-5.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-713.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-790.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-600.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.69MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.96MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.43MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-344.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-615.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-464.1KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇫🇷 法国-2.41MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-446.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.14MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-600.9KB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.14MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.01MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.15MB/s(Youtube:不良林)
       - 🇬🇧 英国-5.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-713.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-790.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-600.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.69MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.96MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.43MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-344.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-615.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-464.1KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-2.41MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-446.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.14MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-600.9KB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.14MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.01MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.15MB/s(Youtube:不良林)
       - 🇬🇧 英国-5.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-713.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-790.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-600.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.69MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.96MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.43MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-344.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-615.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-464.1KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-2.41MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-446.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.14MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-600.9KB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.14MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.01MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.15MB/s(Youtube:不良林)
       - 🇬🇧 英国-5.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-713.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-790.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-600.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.69MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.96MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.43MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-344.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-615.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-464.1KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
