--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇬🇧 英国-5.45MB/s(Youtube:不良林), server: 144.24.88.101, port: 16833, type: vmess, uuid: f5425ccf-3946-4fb4-eb24-5393d78a392f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-713.0KB/s(Youtube:不良林), server: 111.45.29.75, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-790.9KB/s(Youtube:不良林), server: 196.247.59.154, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇦 加拿大-600.9KB/s(Youtube:不良林), server: 134.195.198.95, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
-  - {name: 🇺🇸 美国-1.69MB/s(Youtube:不良林), server: 38.143.66.20, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇩🇪 德国-2.96MB/s(Youtube:不良林), server: 49.12.203.80, port: 40960, type: ss, cipher: aes-256-gcm, password: 6kA7b3f9Aw2508erQ3W7D4}
-  - {name: 🇺🇸 美国-2.43MB/s(Youtube:不良林), server: v116.v2dns.bar, port: 80, type: vmess, uuid: c97cf46e-1554-36cb-8b36-c3556b883dc4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v116-DtoEwAEX, ws-headers: {Host: v116.v2dns.bar}}
-  - {name: 🇨🇦 加拿大-344.6KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇦🇺 澳大利亚-615.3KB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
-  - {name: 🇨🇳 中国-464.1KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65078, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-335.7KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
+  - {name: 🇨🇦 加拿大-947.5KB/s(Youtube:不良林), server: 196.247.59.154, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-498.4KB/s(Youtube:不良林), server: 196.247.59.154, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-183.9KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-635.2KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1014.5KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-458.1KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.41MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-947.2KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.89MB/s(Youtube:不良林), server: 38.143.66.20, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇬🇧 英国-5.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-713.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-790.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-600.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.69MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.96MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.43MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-344.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-615.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-464.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-335.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-947.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-498.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-183.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-635.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1014.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-458.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-947.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇬🇧 英国-5.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-713.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-790.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-600.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.69MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.96MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.43MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-344.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-615.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-464.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-335.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-947.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-498.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-183.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-635.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1014.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-458.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-947.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇬🇧 英国-5.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-713.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-790.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-600.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.69MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.96MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.43MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-344.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-615.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-464.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-335.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-947.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-498.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-183.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-635.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1014.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-458.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-947.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇬🇧 英国-5.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-713.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-790.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-600.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.69MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.96MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.43MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-344.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-615.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-464.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-335.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-947.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-498.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-183.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-635.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1014.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-458.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-947.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇬🇧 英国-5.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-713.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-790.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-600.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.69MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.96MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.43MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-344.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-615.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-464.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-335.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-947.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-498.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-183.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-635.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1014.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-458.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-947.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇬🇧 英国-5.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-713.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-790.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-600.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.69MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.96MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.43MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-344.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-615.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-464.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-335.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-947.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-498.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-183.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-635.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1014.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-458.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-947.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇬🇧 英国-5.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-713.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-790.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-600.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.69MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.96MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.43MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-344.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-615.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-464.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-335.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-947.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-498.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-183.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-635.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1014.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-458.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-947.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
