--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-335.7KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
-  - {name: 🇨🇦 加拿大-947.5KB/s(Youtube:不良林), server: 196.247.59.154, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇦 加拿大-498.4KB/s(Youtube:不良林), server: 196.247.59.154, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-183.9KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-635.2KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-427.5KB/s(Youtube:不良林), server: 185.167.116.250, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
+  - {name: 🇨🇦 加拿大-600.9KB/s(Youtube:不良林), server: 134.195.198.95, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇺🇸 美国-3.26MB/s(Youtube:不良林), server: 38.143.66.20, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
+  - {name: 🇬🇧 英国-5.45MB/s(Youtube:不良林), server: 144.24.88.101, port: 16833, type: vmess, uuid: f5425ccf-3946-4fb4-eb24-5393d78a392f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-394.1KB/s(Youtube:不良林), server: 116.129.254.177, port: 65014, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
   - {name: 🇨🇳 中国-1014.5KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-458.1KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-1.41MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-335.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-947.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-498.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-183.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-635.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-427.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-600.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.26MB/s(Youtube:不良林)
+      - 🇬🇧 英国-5.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-394.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-1014.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-458.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.41MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-335.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-947.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-498.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-183.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-635.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-427.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-600.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.26MB/s(Youtube:不良林)
+      - 🇬🇧 英国-5.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-394.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-1014.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-458.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.41MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-335.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-947.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-498.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-183.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-635.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-427.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-600.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.26MB/s(Youtube:不良林)
+      - 🇬🇧 英国-5.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-394.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-1014.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-458.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.41MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-335.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-947.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-498.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-183.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-635.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-427.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-600.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.26MB/s(Youtube:不良林)
+      - 🇬🇧 英国-5.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-394.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-1014.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-458.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.41MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-335.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-947.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-498.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-183.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-635.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-427.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-600.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.26MB/s(Youtube:不良林)
+      - 🇬🇧 英国-5.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-394.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-1014.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-458.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.41MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-335.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-947.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-498.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-183.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-635.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-427.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-600.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.26MB/s(Youtube:不良林)
+      - 🇬🇧 英国-5.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-394.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-1014.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-458.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.41MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-335.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-947.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-498.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-183.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-635.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-427.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-600.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.26MB/s(Youtube:不良林)
+      - 🇬🇧 英国-5.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-394.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-1014.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-458.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.41MB/s(Youtube:不良林)
